<resources>
    <string name="app_name">QR Quest</string>
    <!--Buttons description-->
    <string name="next_button_description">Navigate to the next screen</string>
    <string name="back_button_description">navigate back to the previous screen</string>
    <string name="camera_button_description">Camera-related actions</string>
    <string name="save_button_description">Save</string>
    <string name="nice_button_description">Nice</string>
    <string name="another_button_description">Another</string>
    <string name="check_button_description">Accept</string>
    <string name="close_button_description">Decline</string>
    <string name="single_button_description">Single</string>

    <!--Users-->
    <string name="username">Dogwood</string>
    <string name="user_profile_description">Display user\'s profile</string>
    <string name="top_user_profile_description">Display top profile</string>
    <string name="qr_code_picture_description">Display a picture of QR Code</string>

    <!--Start Screen-->
    <string name="text_welcome">Welcome to QR Quest!</string>
    <string name="text_getting_started">Getting Started</string>

    <!--Create Account Screen-->
    <string name="text_create_account">Create Account</string>
    <string name="text_choose_name">Please choose a name!</string>
    <string name="text_name_generator">Name generator:</string>

    <!--View/Edit Profile Screen-->
    <string name="unsaved_changes">Unsaved Changes!</string>
    <string name="example_email">Email Address</string>
    <string name="my_profile">My Profile</string>
    <string name="score">SCORE</string>
    <string name="codes">CODES</string>
    <string name="score_example">0</string>
    <string name="history">HISTORY</string>
    <string name="sort">sort</string>
    <string name="incorrect_format">University of Alberta email only</string>

    <!--Main Screen-->
    <string name="leaderboard">leaderboard</string>
    <string name="search">search</string>

    <!--API KEY-->
    <string name="API_key">AIzaSyAy6eUw2krdD9YaS9ERxJ-iH2ZhQll9wqs</string>

    <!--Detected Screen-->
    <string name="qr_detected">QR Detected</string>
    <string name="qr_detected_bonus">A QR code has been found</string>
    <string name="name">NAME</string>
    <string name="abcd_451_26">ABCD#451!~26</string>
    <string name="_10000_pts">10000 Pts</string>

    <!--Add a picture/location Screen-->
    <string name="add_a_picture">Add a picture?</string>
    <string name="add_picture_bonus">Open the camera to take one</string>
    <string name="add_a_location">Add a location?</string>
    <string name="add_location_bonus">Please wait. We are locating you!</string>
    <string name="sorry">Sorry…</string>
    <string name="sure">Sure</string>

    <!--Edit QR Screen-->
    <string name="location">LOCATION</string>
    <string name="latitude_longitude">(102, 122)</string>
    <string name="comment">COMMENT</string>
    <string name="player">PLAYER</string>
    <string name="comment_more">…</string>

    <!--Leaderboard Screen-->
    <string name="user_name_example">Dogwood</string>
    <string name="user_rank_example">25</string>
    <string name="rank_1">1</string>
    <string name="rank_2">2</string>
    <string name="rank_3">3</string>
    <string name="leaderboard_0">Highest scoring QR Codes</string>
    <string name="leaderboard_1">Highest scoring QR Codes (%s)</string>
    <string name="leaderboard_2">Number of QR Codes owned</string>
    <string name="leaderboard_3">Highest sum of QR Codes</string>

    <!-- QR Display Screen -->
    <string name="button_arrow_description">Open the bottom sheet</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="no_comment">No comment yet…</string>
    <string name="add_comment">Add a comment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Search Screen-->
    <string name="search_result_text">Search Result</string>
    <string name="search_button">Search button</string>

</resources>