<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pager"
        app:tabGravity="center"
        app:tabBackground="@drawable/tab_selector"
        app:tabIndicatorHeight="0dp"/>

    <LinearLayout
        android:id="@+id/name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/name_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abcd_451_26"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="120dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/score_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_row"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/score_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10000_pts"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_row"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/location_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_longitude"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_row"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_row"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/comment_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/comment_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:maxLines="3"
            android:autofillHints="Comment..."
            android:inputType="textPersonName"
            android:hint="@string/comment_more"
            android:textColorHint="@color/chinese_violet"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment_row">
            <Button
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close_button_description"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:icon="@drawable/baseline_close_24"
                style="@style/Button.Image.Secondary"/>

            <Button
                android:id="@+id/button_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/check_button_description"
                android:layout_weight="1"
                app:icon="@drawable/baseline_check_24"
                style="@style/Button.Image.Primary"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>