<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Components">

    <!--Floating Action Buttons-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button_description"
        android:src="@drawable/baseline_arrow_forward_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Button.Primary"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_camera_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/camera_button_description"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_next"
        style="@style/Button.Primary.Contrast"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_camera_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/camera_button_description"
        android:src="@drawable/baseline_photo_camera_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_camera_1"
        style="@style/Button.Secondary"/>

    <!--Buttons-->
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_description"
        android:textAppearance="@style/small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_camera_2"
        style="@style/Button.Save" />

    <Button
        android:id="@+id/button_elevated_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nice_button_description"
        android:textAppearance="@style/small"
        app:icon="@drawable/baseline_auto_fix_high_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_save"
        style="@style/Button.Elevated.Primary"/>

    <Button
        android:id="@+id/button_elevated_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/another_button_description"
        android:textAppearance="@style/small"
        app:icon="@drawable/baseline_auto_fix_normal_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_elevated_primary"
        style="@style/Button.Elevated.Secondary"/>

    <!--Image Buttons-->
    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/check_button_description"
        app:icon="@drawable/baseline_check_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_elevated_secondary"
        style="@style/Button.Image.Primary"/>

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close_button_description"
        app:icon="@drawable/baseline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_check"
        style="@style/Button.Image.Secondary"/>

    <Button
        android:id="@+id/button_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_button_description"
        android:textAppearance="@style/small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_close"
        style="@style/Button.Text.Leaderboard.Init"/>

    <!--Text Display-->
    <TextView
        android:id="@+id/text_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_single"
        style="@style/Text.Display"/>

    <!--Profile-->
    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_profile_description"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_display"
        style="@style/Profile.Display" />

    <!--Search bar-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile"
        style="@style/SearchLayout.Style">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/small"
            style="@style/TextInputEdit.Style"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--QR Code Display-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/qr_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
        style="@style/QRDisplay.Style">
        <ImageView
            android:id="@+id/qr_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/qr_code_picture_description"
            android:src="@drawable/qr_logo_small"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="@id/qr_display"
            app:layout_constraintBottom_toBottomOf="@id/qr_display"
            app:layout_constraintStart_toStartOf="@id/qr_display"
            app:layout_constraintEnd_toStartOf="@id/qr_text" />
        <LinearLayout
            android:id="@+id/qr_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/qr_picture"
            app:layout_constraintEnd_toEndOf="@id/qr_display"
            app:layout_constraintTop_toTopOf="@id/qr_display">
            <TextView
                android:id="@+id/qr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="QR CODE #1"
                android:textColor="@color/pale_dogwood"
                android:textAppearance="@style/body" />
            <TextView
                android:id="@+id/qr_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2506 Pts"
                android:layout_gravity="bottom"
                android:textColor="@color/thistle"
                android:textAppearance="@style/body" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>