<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <ImageButton
        android:id="@+id/edit_profile_button_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/next_button_description"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Image.BackButton.Style"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile_button_back"
        android:orientation="horizontal"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pager"
        app:tabGravity="center"
        app:tabBackground="@drawable/tab_selector"
        app:tabIndicatorHeight="0dp"/>

    <LinearLayout
        android:id="@+id/name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/name_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abcd_451_26"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="120dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/score_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_row"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/score_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10000_pts"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_row"
        style="@style/Text.Display">
        <TextView
            android:id="@+id/location_text_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="@style/small"
            android:textColor="@color/thistle"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/qr_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_longitude"
            android:textAppearance="@style/small"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>