<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/add_picture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_picture"
        android:textAppearance="@style/Heading.4"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/add_picture_bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_picture_bonus"
        android:textAppearance="@style/small"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_picture_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_picture_bonus">
        <Button
            android:id="@+id/button_sorry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sorry"
            android:textAppearance="@style/small"
            android:layout_weight="0.5"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/baseline_close_24"
            style="@style/Button.Elevated.Secondary"/>

        <Button
            android:id="@+id/button_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textAppearance="@style/small"
            android:layout_weight="0.5"
            android:layout_marginStart="16dp"
            app:icon="@drawable/baseline_check_24"
            style="@style/Button.Elevated.Primary"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>